--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 19:05:04 2018</p>
+         Last Run: Sun Jul 22 20:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,15 +30,15 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of Rain</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>24</td>
-                        <td>50</td>
+                        <td>31</td>
+                        <td>51</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NNE</td>
-                        <td>65</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -46,18 +46,18 @@
                         <td>17</td>
                         <td>17</td>
                         <td>20</td>
-                        <td>52</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>54</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>59</td>
                         <td>0</td>
                         <td>10</td>
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
+                 "31",
                  "20",
-                 "5"
+                 "6"
                ]
              },
              {
@@ -180,8 +180,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
-                 "52",
+                 "51",
+                 "53",
                  "59"
                ]
              },
@@ -190,8 +190,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "65",
-                 "54",
+                 "67",
+                 "55",
                  "48"
                ]
              }
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 19:05:04 2018</p>
+         Last Run: Sun Jul 22 20:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -234,11 +234,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>41</td>
                         <td>2</td>
                         <td>13</td>
-                        <td>SE</td>
-                        <td>28</td>
+                        <td>ESE</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -246,23 +246,23 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>42</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>SE</td>
-                        <td>53</td>
+                        <td>ESE</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>0</td>
-                        <td>46</td>
+                        <td>1</td>
+                        <td>45</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>51</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -270,11 +270,11 @@
                         <td>17</td>
                         <td>17</td>
                         <td>4</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>ESE</td>
-                        <td>50</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -404,7 +404,7 @@
                "data":[
                  "0",
                  "0",
-                 "0",
+                 "1",
                  "4",
                  "36"
                ]
@@ -414,10 +414,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "41",
                  "42",
-                 "43",
-                 "46",
-                 "56",
+                 "45",
+                 "55",
                  "66"
                ]
              },
@@ -426,10 +426,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
-                 "53",
+                 "27",
                  "51",
-                 "50",
+                 "49",
+                 "48",
                  "50"
                ]
              }
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 19:05:04 2018</p>
+         Last Run: Sun Jul 22 20:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -496,9 +496,9 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>23</td>
+                        <td>24</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NW</td>
                         <td>1</td>
                      </tr>
@@ -508,7 +508,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>22</td>
+                        <td>23</td>
                         <td>7</td>
                         <td>11</td>
                         <td>NNW</td>
@@ -517,10 +517,10 @@
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>28</td>
-                        <td>28</td>
-                        <td>5</td>
-                        <td>22</td>
+                        <td>27</td>
+                        <td>27</td>
+                        <td>8</td>
+                        <td>23</td>
                         <td>6</td>
                         <td>11</td>
                         <td>NNW</td>
@@ -574,7 +574,7 @@
                  "26",
                  "27",
                  "27",
-                 "28"
+                 "27"
                ]
              },
              {
@@ -587,7 +587,7 @@
                  "26",
                  "27",
                  "27",
-                 "28"
+                 "27"
                ]
              }
            ]
@@ -644,7 +644,7 @@
                  "0",
                  "0",
                  "0",
-                 "5"
+                 "8"
                ]
              },
              {
@@ -654,9 +654,9 @@
                "data":[
                  "34",
                  "27",
+                 "24",
                  "23",
-                 "22",
-                 "22"
+                 "23"
                ]
              },
              {
