--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 20:05:17 2018</p>
+         Last Run: Sun Jul 22 21:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Mostly Cloudy</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>31</td>
-                        <td>51</td>
+                        <td>24</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>67</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>20</td>
-                        <td>53</td>
+                        <td>24</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>55</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>6</td>
-                        <td>59</td>
+                        <td>15</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNE</td>
-                        <td>48</td>
+                        <td>65</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "31",
-                 "20",
-                 "6"
+                 "24",
+                 "24",
+                 "15"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "53",
-                 "59"
+                 "52",
+                 "54",
+                 "60"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "67",
-                 "55",
-                 "48"
+                 "68",
+                 "70",
+                 "65"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 20:05:17 2018</p>
+         Last Run: Sun Jul 22 21:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -237,8 +237,8 @@
                         <td>41</td>
                         <td>2</td>
                         <td>13</td>
-                        <td>ESE</td>
-                        <td>27</td>
+                        <td>SE</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -249,20 +249,20 @@
                         <td>42</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>ESE</td>
-                        <td>51</td>
+                        <td>SE</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>1</td>
-                        <td>45</td>
+                        <td>0</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>49</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -270,19 +270,19 @@
                         <td>17</td>
                         <td>17</td>
                         <td>4</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>ESE</td>
-                        <td>48</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>36</td>
-                        <td>66</td>
+                        <td>37</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
@@ -404,9 +404,9 @@
                "data":[
                  "0",
                  "0",
-                 "1",
+                 "0",
                  "4",
-                 "36"
+                 "37"
                ]
              },
              {
@@ -416,9 +416,9 @@
                "data":[
                  "41",
                  "42",
-                 "45",
-                 "55",
-                 "66"
+                 "46",
+                 "56",
+                 "67"
                ]
              },
              {
@@ -426,10 +426,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
+                 "28",
+                 "53",
                  "51",
-                 "49",
-                 "48",
+                 "50",
                  "50"
                ]
              }
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 20:05:17 2018</p>
+         Last Run: Sun Jul 22 21:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -496,9 +496,9 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>24</td>
+                        <td>23</td>
                         <td>6</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NW</td>
                         <td>1</td>
                      </tr>
@@ -508,7 +508,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>23</td>
+                        <td>22</td>
                         <td>7</td>
                         <td>11</td>
                         <td>NNW</td>
@@ -517,10 +517,10 @@
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>27</td>
-                        <td>27</td>
-                        <td>8</td>
-                        <td>23</td>
+                        <td>28</td>
+                        <td>28</td>
+                        <td>4</td>
+                        <td>22</td>
                         <td>6</td>
                         <td>11</td>
                         <td>NNW</td>
@@ -574,7 +574,7 @@
                  "26",
                  "27",
                  "27",
-                 "27"
+                 "28"
                ]
              },
              {
@@ -587,7 +587,7 @@
                  "26",
                  "27",
                  "27",
-                 "27"
+                 "28"
                ]
              }
            ]
@@ -644,7 +644,7 @@
                  "0",
                  "0",
                  "0",
-                 "8"
+                 "4"
                ]
              },
              {
@@ -654,9 +654,9 @@
                "data":[
                  "34",
                  "27",
-                 "24",
                  "23",
-                 "23"
+                 "22",
+                 "22"
                ]
              },
              {
