--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 01:05:04 2018</p>
+         Last Run: Mon Jul 23 02:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Partly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>24</td>
-                        <td>58</td>
+                        <td>7</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>N</td>
-                        <td>59</td>
+                        <td>NNE</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>24</td>
-                        <td>59</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>NNE</td>
-                        <td>65</td>
-                     </tr>
-                     <tr>
-                        <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>66</td>
+                        <td>16</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNE</td>
                         <td>62</td>
+                     </tr>
+                     <tr>
+                        <td>09:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>18</td>
+                        <td>66</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>N</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "24",
-                 "15"
+                 "7",
+                 "16",
+                 "18"
                ]
              },
              {
@@ -180,8 +180,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "58",
-                 "59",
+                 "57",
+                 "57",
                  "66"
                ]
              },
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "59",
-                 "65",
-                 "62"
+                 "53",
+                 "62",
+                 "58"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 01:05:04 2018</p>
+         Last Run: Mon Jul 23 02:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -231,14 +231,14 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>15</td>
-                        <td>42</td>
+                        <td>44</td>
                         <td>2</td>
                         <td>11</td>
-                        <td>SE</td>
-                        <td>50</td>
+                        <td>ESE</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -246,11 +246,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>43</td>
+                        <td>47</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>SE</td>
-                        <td>42</td>
+                        <td>ESE</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -258,23 +258,23 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>46</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>18</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>1</td>
-                        <td>56</td>
+                        <td>3</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>27</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -282,11 +282,11 @@
                         <td>15</td>
                         <td>15</td>
                         <td>18</td>
-                        <td>65</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>ESE</td>
-                        <td>25</td>
+                        <td>SE</td>
+                        <td>28</td>
                      </tr>
                   </tbody>
                </table>
@@ -332,7 +332,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
+                 "20",
                  "20",
                  "19",
                  "17",
@@ -345,7 +345,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
+                 "20",
                  "20",
                  "19",
                  "17",
@@ -405,7 +405,7 @@
                  "15",
                  "15",
                  "0",
-                 "1",
+                 "3",
                  "18"
                ]
              },
@@ -414,11 +414,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "42",
-                 "43",
-                 "46",
-                 "56",
-                 "65"
+                 "44",
+                 "47",
+                 "50",
+                 "60",
+                 "69"
                ]
              },
              {
@@ -426,11 +426,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "42",
-                 "18",
-                 "27",
-                 "25"
+                 "55",
+                 "45",
+                 "22",
+                 "30",
+                 "28"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 01:05:04 2018</p>
+         Last Run: Mon Jul 23 02:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -469,32 +469,32 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>0</td>
                         <td>34</td>
                         <td>4</td>
                         <td>10</td>
-                        <td>WNW</td>
+                        <td>NW</td>
                         <td>0</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>15</td>
                         <td>27</td>
                         <td>5</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>31</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>27</td>
-                        <td>27</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>15</td>
                         <td>24</td>
                         <td>6</td>
@@ -524,7 +524,7 @@
                         <td>6</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>32</td>
+                        <td>31</td>
                      </tr>
                   </tbody>
                </table>
@@ -570,9 +570,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "24",
+                 "23",
+                 "25",
                  "26",
-                 "27",
                  "27",
                  "27"
                ]
@@ -583,9 +583,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "24",
+                 "23",
+                 "25",
                  "26",
-                 "27",
                  "27",
                  "27"
                ]
@@ -665,10 +665,10 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "0",
+                 "30",
                  "31",
                  "31",
-                 "31",
-                 "32"
+                 "31"
                ]
              }
            ]
